--- a/files/rsyslog.conf
+++ b/files/rsyslog.conf
@@ -11,5 +11,8 @@ $WorkDirectory /var/lib/rsyslog
 # Don't omit local logging (turned on by default)
 $OmitLocalLogging off
 
+# Log local messages
+*.info;mail.none;authpriv.none;cron.none                /var/log/dork/messages
+
 # Include all config files in /etc/rsyslog.d/
 $IncludeConfig /etc/rsyslog.d/*.conf
