Syslog service fixes.

--- a/files/rsyslog.conf
+++ b/files/rsyslog.conf
@@ -8,6 +8,9 @@ $ModLoad imuxsock
 # Where to place auxiliary files
 $WorkDirectory /var/lib/rsyslog
 
+# Use default timestamp format
+$ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
+
 # Don't omit local logging (turned on by default)
 $OmitLocalLogging off
 
